--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>GRPC Test</title>
+    <title>Fullstack GRPC</title>
   </head>
 
   <body>
+    <div id="root"></div>
     <script src="./index.ts"></script>
   </body>
 </html>
